:memo: Add documentation

--- a/app/WhichCandidateAreYou.ipynb
+++ b/app/WhichCandidateAreYou.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "7f7fe6a6-7e66-4bb5-9fc6-378abf5818e4",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "9233eae2-975c-4180-b8a3-9b94ee174287",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "9f1e88b7-4723-43ab-ac8a-f8f0ee70a5e7",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "6c58a422-6e54-4929-8812-a854a8df2218",
    "metadata": {},
    "outputs": [],
@@ -82,19 +82,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "fa82b92e-e095-4534-a64e-7eca296b9c2b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "184ecb330cc54c6a8cfced75e2cc9eac",
+       "model_id": "70903635154242a2b12e3d48f5c1a198",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Label(value='Select your bear!'), FileUpload(value={}, description='Upload'), Button(descriptio…"
+       "VBox(children=(Label(value='Select a picture! The French candidate most corresponding to that picture will be …"
       ]
      },
      "metadata": {},
@@ -102,7 +102,7 @@
     }
    ],
    "source": [
-    "VBox([widgets.Label('Select your bear!'), \n",
+    "VBox([widgets.Label('Select a picture! The French candidate most corresponding to that picture will be predicted.'), \n",
     "      btn_upload, btn_run, out_pl, lbl_pred])"
    ]
   }
